[package]
name = "libspl"
version = "0.4.5"
edition = "2024"
authors = ["Noah Friedman <speelbarrow@speely.net>"]
license = "AGPL-3.0-or-later"

[lib]
test = false

[[test]]
name = "bytes"
harness = false

[[test]]
name = "interaction"
harness = false

[features]
default = ["ssh", "stdio", "tcp"]
interaction = [
  "tokio/macros",
  "tokio/io-util",
  "tokio/io-std",
  "tokio/sync",
  "tokio/time",
]
ssh = ["interaction", "dep:openssh"]
stdio = ["interaction", "tokio/process"]
tcp = ["interaction", "tokio/net", "tokio/macros"]

[dependencies]
ouroboros = "0.18.5"
trait-variant = "0.1.2"

[dependencies.openssh]
default-features = false
features = ["native-mux"]
optional = true
version = "0.11.5"

[dependencies.tokio]
optional = true
version = "1.47"

[dev-dependencies]
cucumber = "0.21.1"
derive_more = { version = "2.0.1", features = ["deref", "deref_mut"] }
num-traits = "0.2.19"
quote = "1.0.42"
rand = "0.9.2"

[dev-dependencies.tokio]
features = ["rt-multi-thread"]
version = "1.48.0"
