[package]
name = "libspl"
version = "0.4.6"
edition = "2024"
authors = ["Noah Friedman <speelbarrow@speely.net>"]
license = "AGPL-3.0-or-later"

[lib]
test = false

[[test]]
name = "bytes"
harness = false

[[test]]
name = "interaction"
harness = false

[features]
default = ["ssh", "stdio", "tcp"]
clipboard = ["dep:clipboard-rs", "interaction"]
interaction = [
  "tokio/macros",
  "tokio/io-util",
  "tokio/io-std",
  "tokio/sync",
  "tokio/time",
]
ssh = ["interaction", "dep:openssh"]
stdio = ["interaction", "tokio/process"]
tcp = ["interaction", "tokio/net", "tokio/macros"]

[dependencies]
cfg-if = "1.0.4"
ouroboros = "0.18.5"
trait-variant = "0.1.2"

[dependencies.clipboard-rs]
optional = true
version = "0.3.3"

[dependencies.openssh]
default-features = false
features = ["native-mux"]
optional = true
version = "0.11.6"

[dependencies.tokio]
optional = true
version = "1.50.0"

[dev-dependencies]
cucumber = "0.22.1"
num-traits = "0.2.19"
quote = "1.0.45"
rand = "0.10.0"

[dev-dependencies.derive_more]
features = ["deref", "deref_mut"]
version = "2.1.1"

[dev-dependencies.tokio]
features = ["rt-multi-thread"]
version = "1.50.0"
